test/message/prepareStackTrace-object.out
*test*message*prepareStackTrace-object.js:*
throw new Error();
^
Error: custom Error Object!
